Update controller and service test for put request with id