@@ -15,7 +15,10 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.mockito.ArgumentMatchers.any;
@@ -58,9 +61,9 @@ public class RecipeControllerTest {
         Ingredient porridgeOats = new Ingredient("Porridge Oats", "50g", porridgeRecipe.getId());
         Ingredient milk = new Ingredient("Milk", "350ml", porridgeRecipe.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> ingredientsList = List.of(porridgeOats, milk);
+        Set<Ingredient> ingredientsSet = new HashSet<>(Arrays.asList(porridgeOats, milk));
 //      Add ingredients to recipe
-        porridgeRecipe.setIngredients(ingredientsList);
+        porridgeRecipe.setIngredients(ingredientsSet);
 
 //      create instructions for the recipe
         Instruction porridgeStep1 = new Instruction( 1,"Add your porridge oats to your saucepan.", porridgeRecipe.getId());
@@ -107,7 +110,7 @@ public class RecipeControllerTest {
         Ingredient stockCubes = new Ingredient("Stock Cubes", "2", vegSoup.getId());
         Ingredient blackPepper = new Ingredient("Black Pepper", "1tbsp", vegSoup.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> soupIngredientSet = List.of(water, carrot, potato, stockCubes, blackPepper);
+        Set<Ingredient> soupIngredientSet = new HashSet<>(Arrays.asList(water, carrot, potato, stockCubes, blackPepper));
 //        add ingredients to recipe
         vegSoup.setIngredients(soupIngredientSet);
 
@@ -136,9 +139,10 @@ public class RecipeControllerTest {
     @Test
     public void shouldUpdateAnExistingRecipe() throws Exception {
 //        given
+//       Create placeholder ID for default recipe
+       getDefaultRecipe().setId(1L);
 //      Add recipe to Recipe list
         List<Recipe> recipeList = List.of(getDefaultRecipe());
-        given(recipeService.getAllRecipes()).willReturn(recipeList);
 
 //        build "updated" recipe
         Recipe veganPorridgeRecipe = Recipe.builder()
@@ -149,9 +153,9 @@ public class RecipeControllerTest {
         Ingredient veganPorridgeOats = new Ingredient("Porridge Oats", "50g", veganPorridgeRecipe.getId());
         Ingredient oatMilk = new Ingredient("Oat Milk", "350ml", veganPorridgeRecipe.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> porridgeIngredientsList = List.of(veganPorridgeOats, oatMilk);
+        Set<Ingredient> porridgeingredientsSet = new HashSet<>(Arrays.asList(veganPorridgeOats, oatMilk));
 //      Add ingredients to recipe
-        veganPorridgeRecipe.setIngredients(porridgeIngredientsList);
+        veganPorridgeRecipe.setIngredients(porridgeingredientsSet);
 
 //      create instructions for the recipe
         Instruction veganPorridgeStep1 = new Instruction(1, "Add your porridge oats to your saucepan.", veganPorridgeRecipe.getId());
@@ -162,15 +166,16 @@ public class RecipeControllerTest {
 //      Add instructions to recipe
         veganPorridgeRecipe.setInstructions(porridgeInstructionList);
 
-        given(recipeService.updateRecipe(eq(getDefaultRecipe().getName()), any(Recipe.class))).willReturn(veganPorridgeRecipe);
+//        check existing recipe actually exists
+        given(recipeService.getAllRecipes()).willReturn(recipeList);
 
 //        when - put request
-        ResultActions response = mockMvc.perform(put("/recipe/{name}", getDefaultRecipe().getName())
+        ResultActions response = mockMvc.perform(put("/recipe/{id}", 1L)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(veganPorridgeRecipe)));
 //        then
-        response.andExpect(status().isNoContent())
-                .andExpect(content().json(objectMapper.writeValueAsString(veganPorridgeRecipe)));
+        response.andExpect(status().isNoContent());
+//        verify(recipeService).updateRecipe(1L, veganPorridgeRecipe);
     }
 
 
