@@ -6,8 +6,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
@@ -33,9 +32,9 @@ public class RecipeServiceImplTest {
         Ingredient porridgeOats = new Ingredient("Porridge Oats", "50g", porridgeRecipe.getId());
         Ingredient milk = new Ingredient("Milk", "350ml", porridgeRecipe.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> ingredientsList = List.of(porridgeOats, milk);
+        Set<Ingredient> IngredientsSet = new HashSet<>(Arrays.asList(porridgeOats, milk));
 //      Add ingredients to recipe
-        porridgeRecipe.setIngredients(ingredientsList);
+        porridgeRecipe.setIngredients(IngredientsSet);
 
 //      create instructions for the recipe
         Instruction porridgeStep1 = new Instruction(1,"Add your porridge oats to your saucepan.", porridgeRecipe.getId());
@@ -46,7 +45,6 @@ public class RecipeServiceImplTest {
         List<Instruction> instructionList = List.of(porridgeStep1, porridgeStep2, porridgeStep3);
 //      Add instructions to recipe
         porridgeRecipe.setInstructions(instructionList);
-
         return porridgeRecipe;
     }
 
@@ -85,7 +83,7 @@ public class RecipeServiceImplTest {
         Ingredient stockCubes = new Ingredient("Stock Cubes", "2", vegSoup.getId());
         Ingredient blackPepper = new Ingredient("Black Pepper", "1tbsp", vegSoup.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> soupIngredientSet = List.of(water, carrot, potato, stockCubes, blackPepper);
+        Set<Ingredient> soupIngredientSet = new HashSet<>(Arrays.asList(water, carrot, potato, stockCubes, blackPepper));
 //        add ingredients to recipe
         vegSoup.setIngredients(soupIngredientSet);
 
@@ -106,10 +104,35 @@ public class RecipeServiceImplTest {
     }
 
     @Test
-    public void shouldUpdateAnExistingRecipe() throws Exception {
+    public void shouldUpdateAnExistingRecipe()  {
 //     given
-//     Add recipe to Recipe list
-        List<Recipe> recipeList = List.of(getDefaultRecipe());
+////        Create placeholder ID for default recipe
+//        getDefaultRecipe().setId(1L);
+////     Add recipe to Recipe list
+        Recipe existingRecipe = Recipe.builder()
+                .id(1L)
+                .name("Quick and Easy Porridge")
+                .build();
+
+//        create ingredients for the recipe
+        Ingredient porridgeOats = new Ingredient("Porridge Oats", "50g", existingRecipe.getId());
+        Ingredient milk = new Ingredient("Milk", "350ml", existingRecipe.getId());
+//        create set to hold all ingredients in the recipe
+        Set<Ingredient> IngredientsSet = new HashSet<>(Arrays.asList(porridgeOats, milk));
+//      Add ingredients to recipe
+        existingRecipe.setIngredients(IngredientsSet);
+
+//      create instructions for the recipe
+        Instruction porridgeStep1 = new Instruction(1,"Add your porridge oats to your saucepan.", existingRecipe.getId());
+        Instruction porridgeStep2 = new Instruction(2, "Pour the milk into the saucepan.", existingRecipe.getId());
+        Instruction porridgeStep3 = new Instruction(3, "Cook on medium to low heat for 4-5 minutes and then serve and enjoy",
+                existingRecipe.getId());
+//      create list to hold all instructions in recipe
+        List<Instruction> instructionList = List.of(porridgeStep1, porridgeStep2, porridgeStep3);
+//      Add instructions to recipe
+        existingRecipe.setInstructions(instructionList);
+        recipeService.addNewRecipe(existingRecipe);
+        recipeRepository.save(existingRecipe);
 
 //        build "updated" recipe
         Recipe veganPorridgeRecipe = Recipe.builder()
@@ -120,9 +143,9 @@ public class RecipeServiceImplTest {
         Ingredient veganPorridgeOats = new Ingredient("Porridge Oats", "50g", veganPorridgeRecipe.getId());
         Ingredient oatMilk = new Ingredient("Oat Milk", "350ml", veganPorridgeRecipe.getId());
 //        create set to hold all ingredients in the recipe
-        List<Ingredient> porridgeIngredientsList = List.of(veganPorridgeOats, oatMilk);
+        Set<Ingredient> porridgeIngredientsSet = new HashSet<>(Arrays.asList(veganPorridgeOats, oatMilk));
 //      Add ingredients to recipe
-        veganPorridgeRecipe.setIngredients(porridgeIngredientsList);
+        veganPorridgeRecipe.setIngredients(porridgeIngredientsSet);
 
 //      create instructions for the recipe
         Instruction veganPorridgeStep1 = new Instruction(1, "Add your porridge oats to your saucepan.", veganPorridgeRecipe.getId());
@@ -133,13 +156,14 @@ public class RecipeServiceImplTest {
 //      Add instructions to recipe
         veganPorridgeRecipe.setInstructions(porridgeInstructionList);
 
-        given(recipeRepository.findByName(getDefaultRecipe().getName())).willReturn(Optional.of(getDefaultRecipe()));
+//        given(recipeRepository.findById(existingRecipe().getId())).willReturn(Optional.of(existingRecipe()));
 
 //        when
-        recipeService.updateRecipe(getDefaultRecipe().getName(), veganPorridgeRecipe);
+        recipeService.updateRecipe(existingRecipe.getId(), veganPorridgeRecipe);
 //        then
         verify(recipeRepository).save(veganPorridgeRecipe);
-        assertEquals(recipeService.updateRecipe(getDefaultRecipe().getName(), veganPorridgeRecipe), veganPorridgeRecipe);
+//        assertEquals(recipeRepository.findById(1L), Optional.of(veganPorridgeRecipe));
     }
+
 
 }
